--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2656,12 +2656,16 @@ html {
 			background-image: url('images/ecranmoyen.png');
 		}
 	}
-  @media screen and (aspect-ratio: 16/10) {
-	#header {
-		background-image: url("images/1610.png");
-		width: 20%;
-	}
-}
+     @media screen
+and (min-device-width: 1200px)
+and (max-device-width: 1600px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (min-resolution: 192dpi) {
+		 #header{
+			 background-image: url("images/1610.png");
+		 }
+	 }
+
 
 		#header > * {
 			-moz-flex-shrink: 0;
